--- a/cloud_init/cloud_init-k8s-control-plane.cfg
+++ b/cloud_init/cloud_init-k8s-control-plane.cfg
@@ -10,7 +10,7 @@ growpart:
 users:
   - name: terraform-libvirt
     %{ if ssh-public-key != "" }ssh_authorized_keys:
-      - ssh-rsa ${ssh-public-key}
+      - ${ssh-public-key}
     %{ endif }
     sudo: ['ALL=(ALL) NOPASSWD:ALL']
     shell: /bin/bash
@@ -26,7 +26,11 @@ runcmd:
   - modprobe br_netfilter
   - echo "net.ipv4.ip_forward = 1\nnet.bridge.bridge-nf-call-ip6tables = 1\nnet.bridge.bridge-nf-call-iptables = 1" > /etc/sysctl.d/k8s.conf
   - sysctl --system
-  - apt-get update && apt-get install -y apt-transport-https curl containerd 2>&1
+  - apt-get update && apt-get install -y lsb-release gnupg2 software-properties-common apt-transport-https ca-certificates curl 2>&1
+  - sudo mkdir -m 0755 -p /etc/apt/keyrings && curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg
+  - echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" > /etc/apt/sources.list.d/docker.list 2>&1
+  - sudo apt update && sudo apt install containerd.io -y && sudo rm  /etc/containerd/config.toml
+  - sudo systemctl restart containerd && sudo systemctl enable containerd 2>&1
   - curl -s https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key add - 2>&1
   - echo "deb https://apt.kubernetes.io/ kubernetes-xenial main" > /etc/apt/sources.list.d/kubernetes.list 2>&1
   - apt-get update && apt-get install -y kubelet kubeadm kubectl 2>&1
